# SP2022

./: CMakeLists.txt
EN/ex1/: task1.c
EN/ex10/: task1.c  task2.c  task3.c  task4.c  task5.c
EN/ex11/: task1.c  task2.c  task3.c  task4.c  task5.c
EN/ex13/: input.txt  output.txt  task1.c  task2.c  task3.c  task4.c  task5.c
EN/ex14/: README.md  task1.c  task2.c  task3.c
EN/ex2/: task1.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
EN/ex3/: task1.c  task2.c  task3.c  task4.c  task5.c
EN/ex4/: homework.c  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c
EN/ex5/: task1.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c
EN/ex6/: README.md  task1.c  task2.c  task3.c  task4.c
EN/ex8/: intro.c  task1.c  task2.c  task3.c  task4.c
EN/ex9/: task1.c  task2.c  task3.c  task4.c
MK/av1/: zad1.c
MK/av10/: zad1.c  zad2.c  zad3.c  zad4.c  zad5.c  zad6.c  zad7.c  zad8.c
MK/av11/: zad1.c  zad2.c  zad3.c  zad4.c
MK/av12/: zad1.c  zad2.c  zad3.c  zad4.c  zad5.c  zad6.c  zad7.c  zad8.c  zad9.c
MK/av13/: matrica.txt  output.txt  text.txt  zad1.c  zad2.c  zad3.c  zad4.c  zad5.c  zad6.c
MK/av14/: zad1.c  zad2.c
MK/av2/: zad1.c  zad2.c  zad3.c  zad4.c  zad5.c  zad6.c  zad7.c  zad8.c  zad9_dopolnitelna.c
MK/av3/: zad1.c  zad2.c  zad4.c  zad5.c  zad6.c  zad7.c
MK/av4/: zad1.c  zad2.c  zad3.c  zad4.c  zad5.c  zad6.c  zad7.c
MK/av5/: zad1.c  zad10.c  zad2.c  zad3.c  zad4.c  zad5.c  zad6.c  zad7.c  zad8.c  zad9.c
MK/av6/: README.md  zad1.c  zad2.c  zad3.c  zad4.c
MK/av6_dime/: README.md  zad1.c  zad2.c  zad3.c  zad4.c
MK/av7/: zad1.c  zad2.c  zad3.c  zad4.c  zad5.c
