cmake_minimum_required(VERSION 3.21)
project(SP2022 C)

set(CMAKE_C_STANDARD 99)

add_executable(SP2022 main.c)
add_executable(task1 EN/ex1/task1.c)
add_executable(zad1 MK/av2/zad1.c)
add_executable(zad2 MK/av2/zad2.c)
add_executable(zad3 MK/av2/zad3.c)
add_executable(zad4 MK/av2/zad4.c)
add_executable(zad5 MK/av2/zad5.c)
add_executable(zad6 MK/av2/zad6.c)
add_executable(zad7 MK/av2/zad7.c)