cmake_minimum_required(VERSION 3.21)
project(SP2022 C)

set(CMAKE_C_STANDARD 99)

add_executable(SP2022 main.c)
add_executable(homework EN/ex4/homework.c)
add_executable(task1 EN/ex11/task1.c)
add_executable(task2 EN/ex11/task2.c)
add_executable(task3 EN/ex11/task3.c)
add_executable(task4 EN/ex11/task4.c)
add_executable(task5 EN/ex11/task5.c)
add_executable(task6 EN/ex5/task6.c)
add_executable(task7 EN/ex5/task7.c)
add_executable(task8 EN/ex5/task8.c)
add_executable(task9 EN/ex2/task9.c)
add_executable(intro EN/ex8/intro.c)
add_executable(zad1 MK/av11/zad1.c)
add_executable(zad2 MK/av11/zad2.c)
add_executable(zad3 MK/av11/zad3.c)
add_executable(zad4 MK/av11/zad4.c)
add_executable(zad5 MK/av10/zad5.c)
add_executable(zad6 MK/av10/zad6.c)
add_executable(zad7 MK/av10/zad7.c)
add_executable(zad8 MK/av10/zad8.c)
add_executable(zad9 MK/av5/zad9.c)
add_executable(zad10 MK/av5/zad10.c)
add_executable(zad9_dop MK/av2/zad9_dopolnitelna.c)
add_executable(test test.c)